fixed the align of second colum in block of program

--- a/src/components/Program/Program.scss
+++ b/src/components/Program/Program.scss
@@ -87,7 +87,7 @@
 table {
   width: 100%; 
   height: 500px;
-  padding-left: 200px;
+  // padding-left: 150px;
   border-collapse: collapse; 
 }
 
@@ -103,9 +103,11 @@ table tr td {
 }
 
 table tr td:nth-child(1) {
+  width: 20%;
   text-align: right;
   font-size: 16px;
   text-align: left;
+
 }
 
 table tr td:nth-child(2) {
@@ -139,11 +141,11 @@ td:last-child {
 
 @media (max-width: 768px) {
   body {
-    font-size: 14px; /* Adjust font size for smaller screens */
+    font-size: 14px;
   }
 
   .container {
-    width: 100%; /* Full width on mobile */
-    padding: 0 15px; /* Add horizontal padding */
+    width: 100%;
+    padding: 0 15px;
   }
 }
